# dev

./: README.md
gg/cpp2html-1.1/cpp2html-1.1/: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  THANKS  WARNINGS  acconfig.h  acinclude.m4  aclocal.m4  config.cache  config.h  config.h.in  config.status  configure  configure.in  mails.txt  txtc.sh
gg/cpp2html-1.1/cpp2html-1.1/doc/: Makefile  Makefile.am  Makefile.in  colors.html  cpp2html.html  cpp2html.html.in
gg/cpp2html-1.1/cpp2html-1.1/src/: Makefile  Makefile.am  Makefile.in  cmdline.c  cmdline.c.html  cmdline.ggo  cmdline.h  cmdline.h.html  colors.h  copyright.text  cpp2html.css  decorators.h  decorators.h.html  footer.html  generators.cc  generators.cc.html  generators.h  generators.h.html  header.html  helptext.h  keys.h  list.h  list.h.html  main.cc  main.cc.html  main.h  main.h.html  messages.cc  messages.cc.html  messages.h  optparser.cc  optparser.h  optparser.yy  optscanner.cc  optscanner.ll  scanner.cc  scanner.ll  tags.cc  tags.cc.html  tags.h  (+4 more)
gg/fakebo-0.4.1/fakebo-0.4.1/: AUTHORS  ChangeLog  HACKING  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  acconfig.h  bo.h  config.c  config.cache  config.h  config.h.in  config.status  configure  configure.in  custom.replies  fakebo.1  fakebo.1.in  fakebo.c  fakebo.conf.dist  fakebo.init  fakebo.spec  fakebo.spec.in  global.h  memwatch.c  memwatch.h  misc.c  misc.h  nb.h  realbo.c
gg/gengetopt-2.6/gengetopt-2.6/: ChangeLog  Makefile  Makefile.in  NEWS  README  THANKS  TODO  acconfig.h  acinclude.m4  aclocal.m4  confdefs.h  config.h  config.h.in  config.status  configure  configure.in
gg/gengetopt-2.6/gengetopt-2.6/doc/: Makefile  Makefile.am  Makefile.in  cmdline1.c  cmdline1.c.html  cmdline1.h  cmdline2.c  cmdline2.h  gengetopt.1  gengetopt.1.in  gengetopt.html  gengetopt.html.in  main1.cc
gg/gengetopt-2.6/gengetopt-2.6/src/: Makefile  Makefile.am  Makefile.in  argsdef.h  cmdline.c  cmdline.ggo  cmdline.h  gengetopt.c  gengetopt.h  gengetopt_strdup.text  ggos.h  gm.c  gm.h  parser.c  parser.h  parser.y  scanner.c  scanner.l  yyerror.c  yywrap.c
gg/gengetopt-2.6/gengetopt-2.6/tests/: Makefile  Makefile.am  Makefile.in  default_values.c  default_values_cmd.ggo  more_than_once.sh  no_optgiven.sh
gg/knocker-0.4.0/knocker-0.4.0/: BUGS  ChangeLog  Makefile  Makefile.in  NEWS  README  TO-DO  acconfig.h  config.cache  config.h  config.h.in  config.status  configure  configure.in
gg/knocker-0.4.0/knocker-0.4.0/docs/: Makefile  Makefile.in  knocker.1
gg/knocker-0.4.0/knocker-0.4.0/src/: Makefile  Makefile.am  Makefile.in  knocker.c  knocker_core.c  knocker_core.h  terminal.c  terminal.h
gg/libports-0.23/libports-0.23.1/: AUTHORS  BUGS  ChangeLog  INSTALL  Makefile  Makefile.in  NEWS  README  autogen.sh  config.cache  config.status  configure  configure.in
gg/libports-0.23/libports-0.23.1/docs/: libports.txt
gg/libports-0.23/libports-0.23.1/src/: Makefile  Makefile.am  Makefile.in  common.h  config.h  config.h.in  create.c  create.h  error.c  error.h  listen.c  listen.h  ports.h  read.c  read.h  write.c  write.h
gg/libports-0.23/libports-0.23.1/tests/: Makefile  Makefile.am  Makefile.in  test01.c  test02.c  test03.c
gg/rain-1.2.7b3/rain-1.2.7b3/: CHANGES  Makefile  Makefile.in  README  TODO  config.cache  config.status  configure  configure.in
gg/rain-1.2.7b3/rain-1.2.7b3/doc/: EXAMPLES
gg/rain-1.2.7b3/rain-1.2.7b3/include/: config.h  config.h.in  rain_common.h  rain_inet_common.h
gg/rain-1.2.7b3/rain-1.2.7b3/source/: rain_command_line.c  rain_defaults.c  rain_die.c  rain_icmp.c  rain_igmp.c  rain_main.c  rain_signal.c  rain_tcp.c  rain_udp.c
gg/smake-1.3.2/smake-1.3.2/: CREDITS  ChangeLog  INSTALL  LICENSE  Makefile  Makefile.in  README  config.cache  config.status  configure  configure.in  smake  smake.1  smake.pod  smake_file.pl  smake_getopts.pl  smake_misc.pl  smake_smake.pl  smake_smkmf.pl  smake_version.pl  smkmf
gg/smake-1.3.2/smake-1.3.2/etc/: shtool  unrequire
gg/smake-1.3.2/smake-1.3.2/include/: README  smk.stddefs  smk.stdtargets  smk.subdir
gg/smake-1.3.2/smake-1.3.2/sample/: Makefile.in  SMakefile
gg/smssend-2.9/smssend-2.9/: AUTHORS  ChangeLog  License.txt  Makefile  Makefile.am  Makefile.in  README  config.cache  config.h  config.h.in  config.status  configure  configure.in  email2smssend  smssend-2.9.readme  smssend.c  smssend.h  smssend.h.in
gg/smssend-2.9/smssend-2.9/docs/: Makefile  Makefile.in
gg/smssend-2.9/smssend-2.9/lycos/: Makefile  Makefile.am  Makefile.in  lycos.c
gg/smssend-2.9/smssend-2.9/scripts/: 1rstwap.sms  6sens.sms  Makefile  Makefile.am  Makefile.in  banana.sms  billiger.sms  bol.sms  bol_rus.sms  boltblue.sms  caltanet.sms  coolsmsdk.sms  e-merge.sms  eurobate.sms  eurotel.sms  everyday.sms  exoset.sms  extel-gsm.sms  fajront.sms  fido.sms  free-sms.sms  freesmsau.sms  genie.sms  goingtonight.sms  halebop.sms  handypack.sms  hooya.sms  hotsms.sms  inet.sms  info2you.sms  ingyensms.sms  inwind.sms  iol.sms  kiwee-inter.sms  kiwee-pseudo.sms  kiwee.sms  koodpo.sms  kostenlos.sms  kostenlos_timer.sms  libertysurf.sms  (+33 more)
gg/smssend-2.9/smssend-2.9/skyutils-1.15/: Makefile  Makefile.am  Makefile.in  liste.c  memory.c  registry.c  skyutils.h  socks.c  string.c  utils.c  web.c
lang/CLISP960530-ki/ffcall/: Makefile  Makefile.devel  Makefile.in  README  config.status  configure  configure.in  list
lang/CLISP960530-ki/ffcall/autoconf/: acgeneral.m4  aclocal.m4  autoconf  config.sub
lang/CLISP960530-ki/ffcall/avcall/: DOC  Makefile  Makefile.devel  Makefile.in  PLATFORMS  README  avcall-alpha.c  avcall-alpha.s  avcall-i386.S  avcall-i386.c  avcall-m68k-amiga-orig.c  avcall-m68k-amiga-swap  avcall-m68k-amiga.c  avcall-m68k-std.c  avcall-m68k-std.s  avcall-m68k-test.c  avcall-mips.c  avcall-mips.s  avcall-sparc.S  avcall-sparc.c  avcall.3  avcall.h  avcall.h.in  (+8 more)
lib/libmpeg_src/: Makefile  Makefile.in  config.cache  config.h  config.status  configure  configure.in  jrevdct.c  parseblock.c  proto.h
lib/libmpeg_src/extras/: Makefile  Makefile.in  mpegtest.c
(+69598 files in other folders)
