# Copyright (C) 1999, 2000, Lorenzo Bettini <lorenzo.bettini@penteres.it>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

EXTRA_DIST = reconf configure WARNINGS mails.txt
SUBDIRS = src doc

cpp2htmldoc_DATA = ChangeLog COPYING NEWS THANKS INSTALL README mails.txt
