dnl configure.in file for knocker
dnl Edit by Gabriele Giorgetti <g.gabriele@europe.com>

dnl to be processed with autoconf 

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(knocker, 0.4.0)
AM_CONFIG_HEADER(config.h)

AC_PROG_CC
AM_PROG_CC_STDC
AC_PROG_INSTALL 
AC_CANONICAL_HOST 

dnl Check for standard C headers
AC_HEADER_STDC

dnl Check for extra required headers
AC_CHECK_HEADERS(       \
	string.h	\
        errno.h         \
	signal.h	\
        netdb.h         \
        netinet/in.h    \
	arpa/inet.h	\
        sys/socket.h    \
	sys/types.h	\
	sys/wait.h	\
        unistd.h        \
)


dnl Use -Wall if we have gcc.
if test "x$GCC" = "xyes" ; then
  CFLAGS="$CFLAGS -Wall"
fi


dnl Check for library functions
AC_CHECK_FUNCS(strcat strcmp strcpy)

dnl Check for pthreads ( stolen from iplog configure.in )
AC_DEFUN([PTHREAD_CHECK],[
        PTHREAD_LIB=no
        AC_CHECK_LIB(pthread, pthread_create, PTHREAD_LIB="-lpthread",
                [AC_CHECK_LIB(pthreads, pthread_create, PTHREAD_LIB="-lpthreads",
                        [AC_CHECK_LIB(c_r, pthread_create, PTHREAD_LIB="-lc_r",
                        [AC_CHECK_FUNCS(pthread_create, PTHREAD_LIB="-lc")]
                        )]
                )]
        )
        AC_PROVIDE([PTHREAD_CHECK])
])

PTHREAD_CHECK

if test $PTHREAD_LIB = "no" ; then
        echo "Error: pthreads are required to build this package."
	echo "The linuxthreads library (for Linux libc5) can be found at"
	echo "ftp://ftp.inria.fr/INRIA/Projects/cristal/Xavier.Leroy/linuxthreads.tar.gz"
        exit 1
fi


pth_cancel=""
if test "$PTHREAD_LIB" = "-lc" ; then
        AC_CHECK_FUNCS(pthread_cancel, pth_cancel="yes")
else
        PJG=`echo $PTHREAD_LIB | sed 's/^-l//g'`
	AC_CHECK_LIB($PJG, pthread_cancel, pth_cancel="yes")
fi
 
if test -n "$pth_cancel" ; then
        AC_DEFINE(HAVE_PTHREAD_CANCEL)
fi

SLIB=$PJG   


if test "$PTHREAD_LIB" = "-lc_r" ; then
        PTHREAD_LIB=""
        CFLAGS="$CFLAGS -pthread"
fi
 
if test "$PTHREAD_LIB" = "-lc" ; then
        PTHREAD_LIB=""
fi
 
if test "$PTHREAD_LIB" = "-lpthreads" ; then
        PTHREAD_LIB="-lpthread"
fi


LIBS="$LIBS $PTHREAD_LIB"

AC_SUBST(LIBS)
AC_OUTPUT([
Makefile
docs/Makefile
src/Makefile
])


