dnl general init
AC_INIT(src/create.c)
AC_PREFIX_DEFAULT(/usr)
AM_CONFIG_HEADER(src/config.h)
AM_INIT_AUTOMAKE(libports, 0.23.1)
AM_MAINTAINER_MODE
AC_ARG_PROGRAM

AM_SANITY_CHECK
AC_PROG_CC
AC_LANG_C
AC_PROG_RANLIB
AC_C_CONST
AC_HEADER_STDC
AC_TYPE_SIGNAL
AC_CHECK_LIB(socket, socket)
AC_PROG_INSTALL

dnl and generate the output
AC_OUTPUT(Makefile src/Makefile tests/Makefile)
