dnl Process this file with autoconf to produce a configure script.
AC_INIT(include/rain_command_line.h)
AC_CONFIG_HEADER(include/config.h)

AC_PROG_INSTALL
AC_PROG_MAKE_SET

dnl Checks for compiler
AC_PROG_CC

dnl Checks for OS type

AC_CANONICAL_HOST

case "$host" in
  *-linux*)
    AC_DEFINE(RAIN_LINUX)
    ;;
  *-openbsd*)
    AC_DEFINE(RAIN_BSD)
    ;;
  *-netbsd*)
    AC_DEFINE(RAIN_BSD)
    ;;
  *-freebsd*)
    AC_DEFINE(RAIN_BSD)
    ;;
esac

AC_TYPE_SIGNAL

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(sys/types.h fcntl.h sys/time.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_DECL_SYS_SIGLIST

dnl Checks for library functions.
AC_FUNC_SETVBUF_REVERSED
AC_CHECK_FUNCS(socket strerror)

AC_OUTPUT(Makefile)

