dnl  AUTOCONF configuration for FFCALL
dnl  Bruno Haible 16.2.1995
dnl
AC_INIT(trampoline/trampoline.h.in)
AC_PROG_MAKE_SET
dnl This piece of sed script replaces every line containing '@subdir@'
dnl by several consecutive lines, each referencing one subdir.
extrasub="$extrasub"'
/@subdir@/{
h
g
s/@subdir@/avcall/
p
g
s/@subdir@/vacall/
p
g
s/@subdir@/trampoline/
p
d
}
'
AC_OUTPUT(Makefile)
AC_OUTPUT_SUBDIRS(avcall vacall trampoline)
