pkgdatadir = $(datadir)/@PACKAGE@

AUTOMAKE_OPTIONS = no-dependencies dist-shar
CFLAGS = @CFLAGS@ @O_SKYUTILS_FLAGS@

pkgdata_DATA = 1rstwap.sms 6sens.sms banana.sms billiger.sms bol.sms bol_rus.sms boltblue.sms caltanet.sms coolsmsdk.sms e-merge.sms eurobate.sms eurotel.sms everyday.sms exoset.sms extel-gsm.sms fajront.sms fido.sms free-sms.sms freesmsau.sms genie.sms goingtonight.sms halebop.sms handypack.sms hooya.sms hotsms.sms inet.sms info2you.sms ingyensms.sms inwind.sms iol.sms kiwee-inter.sms kiwee-pseudo.sms kiwee.sms koodpo.sms kostenlos.sms kostenlos_timer.sms libertysurf.sms lycos.sms lycosde.sms lycosse.sms lycosuk.sms mobimel.sms mtnsms.sms mts.sms mybegin.sms navegalia.sms nwgsm.sms onelv.sms orf.sms oskar.sms paegas.sms passagen.sms quick.sms rekom.sms room33.sms scs-900.sms sfr.sms smsboy.sms smshuis.sms smspress.sms starhub.sms suomi24.sms surfeu.sms time.sms totalise.sms unimobile.sms vlf.sms w777.sms w777f.sms yab.sms

EXTRA_DIST = 1rstwap.sms 6sens.sms banana.sms billiger.sms bol.sms bol_rus.sms boltblue.sms caltanet.sms coolsmsdk.sms e-merge.sms eurobate.sms eurotel.sms everyday.sms exoset.sms extel-gsm.sms fajront.sms fido.sms free-sms.sms freesmsau.sms genie.sms goingtonight.sms halebop.sms handypack.sms hooya.sms hotsms.sms inet.sms info2you.sms ingyensms.sms inwind.sms iol.sms kiwee-inter.sms kiwee-pseudo.sms kiwee.sms koodpo.sms kostenlos.sms kostenlos_timer.sms libertysurf.sms lycos.sms lycosde.sms lycosse.sms lycosuk.sms mobimel.sms mtnsms.sms mts.sms mybegin.sms navegalia.sms nwgsm.sms onelv.sms orf.sms oskar.sms paegas.sms passagen.sms quick.sms rekom.sms room33.sms scs-900.sms sfr.sms smsboy.sms smshuis.sms smspress.sms starhub.sms suomi24.sms surfeu.sms time.sms totalise.sms unimobile.sms vlf.sms w777.sms w777f.sms yab.sms
