dnl  AUTOCONF configuration for AVCALL
dnl  Bruno Haible 6.2.1995
dnl
AC_INIT(avcall.h.in)
AC_CONFIG_HEADER(avcall.h)
AC_PROG_CC
AC_PROG_CPP
AC_PROG_GCC_TRADITIONAL
CL_AS_UNDERSCORE
CL_PROG_RANLIB
AC_PROG_MAKE_SET
CL_PROG_INSTALL
CL_CANONICAL_HOST(../autoconf)
CL_CANONICAL_HOST_CPU
AC_DEFINE_UNQUOTED(__${host_cpu}__)
CL_PCC_STRUCT_RETURN
CL_SMALL_STRUCT_RETURN
AC_OUTPUT(Makefile)
