dnl  AUTOCONF configuration for TRAMPOLINE
dnl  Bruno Haible 7.4.1995
dnl
AC_INIT(trampoline.h.in)
AC_CONFIG_HEADER(config.h)
AC_PROG_CC
AC_PROG_CPP
AC_PROG_GCC_TRADITIONAL
CL_PROG_RANLIB
AC_PROG_MAKE_SET
CL_PROG_INSTALL
AC_PROG_LN_S
CL_VOID
CL_STDC_HEADERS
CL_STDLIB_H
CL_UNISTD_H
AC_TYPE_SIZE_T
AC_TYPE_OFF_T
CL_MALLOC
CL_FREE
CL_ABORT
CL_MKDIR
CL_OPEN
CL_GETPAGESIZE
CL_MACH_VM
CL_OPENFLAGS
CL_MMAP
CL_MPROTECT
CL_SHM_H
CL_SHMGET
CL_SHMAT
CL_SHMCTL
CL_SHM
CL_CANONICAL_HOST(../autoconf)
CL_CANONICAL_HOST_CPU
AC_DEFINE_UNQUOTED(__${host_cpu}__)
CL_CODEEXEC
if test ${host_cpu} = rs6000; then
  CPU_OBJECTS='tramp-$(CPU).o'
else
  if test ${host_cpu} = hppa -o ${host_cpu} = convex; then
    CPU_OBJECTS='cache-$(CPU).o'
  else
    CPU_OBJECTS=''
  fi
fi
AC_SUBST(CPU_OBJECTS)
AC_CHECK_HEADERS(sys/cachectl.h)
if test ${host_cpu} = m88k; then
AC_CHECK_HEADERS(sys/m88kbcs.h)
fi
AC_OUTPUT(Makefile)
